<resources>
    <string name="app_name">Journal</string>
    <string name="action_settings">Settings</string>

    <string name="hint_Uname">Username</string>
    <string name="hint_Password">Password</string>


    <string name="button_login">Login</string>


    <string name="date">Date : </string>
    <string name="num_arr">Arrows :      </string>
    <string name="review">Review :      </string>
    <string name="obj">Objective :   </string>
    <string name="con">Condition :   </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_calendar__handler">Calendar_Handler</string>
    <string name="title_activity_get_log">Edit Log</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="new_note">New Note</string>
    <string name="new_Log">New Log</string>
    <string name="add_photo">Add Photo</string>
    <string name="title">Title:  </string>
    <string name="archeryIcon">Archery_Icon</string>
    <string name="back">Move Back</string>
    <string name="title_activity_camera" />
    <string name="capturePhoto">Capture Photo</string>
    <string name="app_activity_camera">Camera</string>
    <string name="title_activity_activity__camera">Activity_Camera</string>

    <string name="hello_world">Hello world!</string>
    <string name="JournalAppImage">JournalAppImage</string>
    <string name="add_video">Add Video</string>
    <string name="title_activity_activity__gallery">Activity_Gallery</string>
    <string name="title_activity_activity__display__image">Activity_Display_Image</string>
    <string name="display_image">Show Images</string>
    <string name="open_gallery">Open Gallery</string>

</resources>
