<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Activity_Edit_Log">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/obj"
        android:id="@+id/textView_Obj"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/textView_Title"
        android:layout_toLeftOf="@+id/editText_Obj"
        android:layout_toStartOf="@+id/editText_Obj" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText_Obj"
        android:layout_alignBottom="@+id/textView_Obj"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/textView_Con"
        android:layout_toEndOf="@+id/textView_Con"
        android:inputType="text"
        android:maxLines="1"
        android:gravity="bottom|left"
        android:layout_below="@+id/editText_Title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/con"
        android:id="@+id/textView_Con"
        android:layout_alignBottom="@+id/editText_Con"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText_Con"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/textView_Obj"
        android:layout_alignStart="@+id/editText_Obj"
        android:inputType="text"
        android:maxLines="1" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText_Arr"
        android:layout_below="@+id/editText_Con"
        android:layout_alignStart="@+id/editText_Con"
        android:layout_alignEnd="@+id/editText_Con"
        android:maxLines="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/num_arr"
        android:id="@+id/textView_Arr"
        android:layout_alignBottom="@+id/editText_Arr"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/editText_Rev"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/editText_Arr"
        android:layout_alignParentBottom="true"
        android:text="@string/review"
        android:inputType="textMultiLine"
        android:gravity="top"
        android:layout_below="@+id/space" />

    <Space
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/editText_Arr"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/space" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title"
        android:id="@+id/textView_Title"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/textView_Obj"
        android:layout_alignStart="@+id/textView_Obj"
        android:layout_marginTop="15dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText_Title"
        android:layout_alignLeft="@+id/editText_Obj"
        android:layout_alignStart="@+id/editText_Obj"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/textView_Obj" />

</RelativeLayout>
